Add new features on the app
