# src/routes/categories.routes.ts
@@ -1,26 +1,28 @@
-import { Router, Request, Response } from "express";
-// import multer from "multer";
+import { Router } from "express";
+import multer from "multer";
 
-import createCategoryController from "../modules/cars/useCases/createCategory";
-// import { importCategoryController } from "../modules/cars/useCases/importCategory";
-import listCategoryController from "../modules/cars/useCases/listCategories";
+import { CreateCategoryController } from "../modules/cars/useCases/createCategory/CreateCategoryController";
+import { ImportCategoryController } from "../modules/cars/useCases/importCategory/ImportCategoryController";
+import { ListCategoriesController } from "../modules/cars/useCases/listCategories/ListCategoriesController";
 
 const categoriesRoutes = Router();
 
-// const upload = multer({
-//   dest: "./tmp",
-// });
+const createCategoryController = new CreateCategoryController();
+const listCategoriesController = new ListCategoriesController();
+const importCategoryController = new ImportCategoryController();
 
-categoriesRoutes.post("/", (req: Request, res: Response) => {
-  return createCategoryController().handle(req, res);
+const upload = multer({
+  dest: "./tmp",
 });
 
-// categoriesRoutes.post("/import", upload.single("file"), (req, res) => {
-//   return importCategoryController.handle(req, res);
-// });
+categoriesRoutes.post("/", createCategoryController.handle);
 
-categoriesRoutes.get("/", (req: Request, res: Response) => {
-  return listCategoryController().handle(req, res);
-});
+categoriesRoutes.post(
+  "/import",
+  upload.single("file"),
+  importCategoryController.handle
+);
+
+categoriesRoutes.get("/", listCategoriesController.handle);
 
 export { categoriesRoutes };
