# src/routes/specifications.routes.ts
@@ -1,13 +1,12 @@
 import { Router, Request, Response } from "express";
 
-import createSpecificationController from "../modules/cars/useCases/createEspecification";
+import { CreateEspecificationController } from "../modules/cars/useCases/createEspecification/CreateEspecificationController";
 import listSpecificationController from "../modules/cars/useCases/listSpecifications";
 
 const specificationsRoutes = Router();
+const createEspecificationController = new CreateEspecificationController();
 
-specificationsRoutes.post("/", (req: Request, res: Response) => {
-  return createSpecificationController().handle(req, res);
-});
+specificationsRoutes.post("/", createEspecificationController.handle);
 
 specificationsRoutes.get("/", (req: Request, res: Response) => {
   return listSpecificationController().handle(req, res);
